feat(shared): create tooltip

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -325,6 +325,7 @@
       "successMessage": "Thanks for reaching out. I'll get back to you soon.",
       "errorTitle": "Error",
       "rateLimit": "Too many requests. Please wait a moment.",
+      "tooltipInvalid": "The form is invalid",
       "validation": {
         "nameRequired": "Name is required",
         "nameMinLength": "Name must be at least 2 characters",
