--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -35,6 +35,11 @@
     "profile": "L'Architecte",
     "contact": "Embauchez-moi"
   },
+  "contact": {
+    "form": {
+      "tooltipInvalid": "Le formulaire n'est pas valide"
+    }
+  },
   "footer": {
     "copyright": "Angular Enterprise Blueprint"
   }
